# qteverywhere.6.9.1

./: .gitignore  .tag  README.md
coin/platform_configs/: cmake_platforms.yaml  cmake_platforms_qemu_vxworks_buildtest_static.yaml  cmake_platforms_qemu_vxworks_tests_static.yaml  cmake_platforms_static_release.yaml  cmake_platforms_static_tests.yaml  macos.yaml  nightly_unity_builds.yaml  precheck.yaml  qt-creator.yaml  qtbase-new-compiler-testing.yaml  qtcharts.yaml  qtlite.yaml  qtquick3d.yaml  qtsaferenderer-runtime.yaml  qtsaferenderer.yaml  qtvirtualkeyboard.yaml  tqtc-android-automotive.yaml
coin/pre-provisioning/qtci-linux-SLES-15_SP6-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-openSUSE-15.6-x86_64/: README_MANUAL_INSTALLATIONS
coin/provisioning/qtci-linux-RHEL-8.10-x86_64/: 04-install-packages.sh
coin/provisioning/qtci-linux-RHEL-8.2-x86_64/: 04-install-packages.sh
coin/provisioning/qtci-linux-RHEL-8.4-x86_64/: 04-install-packages.sh
coin/provisioning/qtci-linux-RHEL-8.6-x86_64/: 04-install-packages.sh
coin/provisioning/qtci-linux-RHEL-8.8-x86_64/: 04-install-packages.sh
coin/provisioning/qtci-linux-RHEL-9.0-x86_64/: 04-install-packages.sh
coin/provisioning/qtci-linux-RHEL-9.2-x86_64/: 04-install-packages.sh
coin/provisioning/qtci-linux-RHEL-9.4-x86_64/: 04-install-packages.sh
coin/provisioning/qtci-linux-SLES-15_SP4-x86_64/: 02-zypperpackages.sh
coin/provisioning/qtci-linux-SLES-15_SP5-x86_64/: 02-zypperpackages.sh
coin/provisioning/qtci-linux-SLES-15_SP6-x86_64/: 01-systemsetup.sh  02-zypperpackages.sh  08-pythondev.sh
coin/provisioning/qtci-linux-Ubuntu-22.04-aarch64/: 02-apt.sh
coin/provisioning/qtci-linux-Ubuntu-22.04-x86_64/: 02-apt.sh
coin/provisioning/qtci-linux-Ubuntu-24.04-aarch64/: 02-apt.sh
coin/provisioning/qtci-linux-Ubuntu-24.04-x86_64/: 02-apt.sh
coin/provisioning/qtci-linux-openSUSE-15.3-x86_64/: 04-zypperpackages.sh
coin/provisioning/qtci-linux-openSUSE-15.4-x86_64/: 04-zypperpackages.sh
coin/provisioning/qtci-linux-openSUSE-15.5-x86_64/: 04-zypperpackages.sh
demo/AnalogClock/: Readme.md
demo/DeskCapture/: README.md
demo/DeskCapture/src/: Capture.cpp
demo/FloatWidget/: CMakeLists.txt  FloatWidget.pro
demo/RoundLabel/: CMakeLists.txt  Readme.md  roundlabel.qrc
demo/ScreenCapture/: CMakeLists.txt
demo/ScreenCapture/src/: Capture.h  Main.cpp
demo/ScreenCaptureCrop/: CMakeLists.txt  README.md  ScreenCapture.qrc  icon.rc
demo/ScreenCaptureCrop/src/: ButtonWithTip.cpp  ButtonWithTip.h  Config.h  FloatButton.cpp  FloatButton.h  Main.cpp  Menu.cpp  Menu.h  RoundTip.cpp  RoundTip.h  Screen.cpp  Screen.h  ScreenWidget.cpp  ScreenWidget.h  Singleton.h  Tools.cpp  Tools.h
demo/ScreenCaptureCrop/src/hotkey/: NativeEventFilter.cpp  NativeEventFilter.h  ShortcutRegister.cpp  ShortcutRegister.h
demo/WebEngineWidgets/simplebrowserEx/: CMakeLists.txt  Readme.md
demo/WebEngineWidgets/simplebrowserEx/src/: browser.h  tabwidget.cpp
demo/analogclock/: CMakeLists.txt  Readme.md
demo/pixelator/: CMakeLists.txt  Readme.md  main.cpp
demoqml/hello/: CMakeLists.txt  main.cpp
demoqml/pixelator/: CMakeLists.txt  main.cpp
qt3d/: .cmake.conf  .tag  dependencies.yaml
qt5compat/: .cmake.conf  .tag
qtactiveqt/: .tag
qtbase/: .cmake.conf  .release-timestamp  .tag  configure.cmake
qtbase/cmake/: QtConfig.cmake.in  QtInternalTargets.cmake  QtPublicSbomOpsHelpers.cmake
qtbase/util/: update_public_suffix_list.sh
qtcharts/: .tag  dependencies.yaml
qtcoap/: .tag
qtconnectivity/: .cmake.conf  .tag
qtdatavis3d/: .tag
qtdeclarative/: .cmake.conf  .tag  CMakeLists.txt  dependencies.yaml
qtdeclarative/cmake/: QtDeclarativeSetup.cmake
qtdeclarative/tests/auto/cmake/test_target_qml_sources_in_different_scope/: CMakeLists.txt
qtdeclarative/tests/auto/cmake/test_target_qml_sources_in_different_scope/subdir/: CMakeLists.txt
qtdoc/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtgraphs/: .tag  dependencies.yaml
qtgraphs/src/: CMakeLists.txt
qtgrpc/: .tag
qthttpserver/: .cmake.conf  .tag  dependencies.yaml
qthttpserver/doc/: simple-example.qdoc
qtimageformats/: .tag
qtlanguageserver/: .tag
qtlocation/: .cmake.conf  .tag  dependencies.yaml
qtlottie/: .cmake.conf  .tag  REUSE.toml  licenseRule.json
qtmqtt/: .tag
qtmqtt/coin/: module_config.yaml
qtmultimedia/: .tag  CMakeLists.txt  config_help.txt  dependencies.yaml  licenseRule.json
qtmultimedia/cmake/: FindFFmpeg.cmake
qtnetworkauth/: .tag
qtopcua/: .cmake.conf  .tag  dependencies.yaml
qtpositioning/: .tag  dependencies.yaml
qtquick3d/: .cmake.conf  .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtquick3dphysics/: .cmake.conf  .tag  dependencies.yaml
qtquickeffectmaker/: .tag  dependencies.yaml
qtquickeffectmaker/coin/: module_config.yaml
qtquicktimeline/: .tag
qtremoteobjects/: .tag  dependencies.yaml
qtscxml/: .tag
qtsensors/: .cmake.conf  .tag
qtserialbus/: .tag  dependencies.yaml
qtserialport/: .tag  dependencies.yaml
qtshadertools/: .cmake.conf  .tag
qtspeech/: .tag  dependencies.yaml
qtsvg/: .tag
qttools/: .cmake.conf  .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qttools/src/: CMakeLists.txt
qttranslations/: .tag  dependencies.yaml
qttranslations/translations/: linguist_de.ts  qtbase_de.ts  qtdeclarative_de.ts
qtvirtualkeyboard/: .tag  dependencies.yaml
qtwayland/: .tag  REUSE.toml  dependencies.yaml
qtwebchannel/: .tag  dependencies.yaml
qtwebengine/: .cmake.conf  .gitreview  .tag  CHROMIUM_VERSION  CMakeLists.txt  REUSE.toml  coin.nodes  configure.cmake  dependencies.yaml  licenseRule.json
qtwebengine/cmake/: Functions.cmake  QtConfigureHelpers.cmake  QtGnCredits.cmake  QtGnGen.cmake  QtGnSbom.cmake  QtToolchainHelpers.cmake  QtWebEngineSbomHelpers.cmake
qtwebengine/coin/: module_config.yaml
qtwebengine/examples/webenginewidgets/clientcertificate/: CMakeLists.txt
qtwebengine/src/: CMakeLists.txt
qtwebsockets/: .cmake.conf  .tag
qtwebview/: .tag  REUSE.toml  dependencies.yaml
qtwebview/coin/: module_config.yaml
(+1141 files in other folders)
